allowing SiteMapReader to report the location where it finds urls